[package]
name = "mc"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/thewh1teagle/mc"
description = "Cross platform copy files with progress"

[dependencies]
blake2 = "0.10.6"
clap = { version = "4.5.23", features = ["derive"] }
digest = "0.10.7"
eyre = "0.6.12"
file-hashing = "0.1.2"
fs_extra = "1.3.0"
hex = "0.4.3"
humansize = "2.1.3"
keepawake = "0.5.1"
num_cpus = "1.16.0"
sha256 = "1.5.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.10.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"

allow-dirty = ["ci"]
