[package]
name = "mc"
version = "0.4.1"
edition = "2021"
repository = "https://github.com/thewh1teagle/mc"
description = "Cross platform copy files with progress"
license = "MIT"

[dependencies]
blake2 = "0.10.6"
clap = { version = "4.5.23", features = ["derive"] }
console = "0.15.8"
digest = "0.10.7"
eyre = "0.6.12"
file-hashing = "0.1.2"
fs_extra = "1.3.0"
hex = "0.4.3"
humansize = "2.1.3"
indicatif = "0.17.9"
keepawake = "0.5.1"
num_cpus = "1.16.0"
sha256 = "1.5.0"
tracing = "0.1.41"
tracing-indicatif = "0.3.8"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
rand = "0.8.5"
tempfile = "3.14.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
